--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       </div>
     </nav>
     <section id="profile">
-      <div class="section__pic-container">
-        <img src="./profile-pic.png" alt="John Doe profile picture" />
-      </div>
+     # <div class="section__pic-container">
+     #   <img src="./profile-pic.png" alt="John Doe profile picture" />
+     # </div> 
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">John Doe</h1>
