--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Mittapally Yamini</h1>
-        <p class="section__text__p2">Frontend Developer</p>
+        <p class="section__text__p2"></p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -97,7 +97,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <p>Bachelor of Technology<br />Information Technology<br />2019-2023<br />CGPA - 8.5/10</p>
             </div>
           </div>
           <div class="text-container">
